Include tests in coverage.run. #378

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ omit = [
     "*/__init__.py",
     "*/migrations/*",
     "*/factories.py",
-    "*/tests/*",
+    # "*/tests/*",
 ]
 plugins = [
     "django_coverage_plugin",
