--- a/.github/workflows/nox-coverage.yml
+++ b/.github/workflows/nox-coverage.yml
@@ -8,9 +8,9 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
     name: Python ${{ matrix.python-version }} django-start
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
@@ -26,10 +26,11 @@ jobs:
           nox -s lint-${{ matrix.python-version }}
 
       - name: "Upload coverage data"
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: covdata
-          path: .coverage.*
+          name: coverage-data-${{ matrix.python-version }}
+          path: htmlcov/*
+          if-no-files-found: ignore
   
   coverage:
     name: Coverage
@@ -37,10 +38,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Check out the repo"
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: "Set up Python"
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
@@ -49,9 +50,10 @@ jobs:
           python -m pip install nox==2023.4.22 poetry==1.7.1
 
       - name: "Download coverage data"
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: covdata
+          pattern: coverage-data-*
+          merge-multiple: true
 
       - name: "Combine"
         run: |
