--- a/.github/workflows/nox-coverage.yml
+++ b/.github/workflows/nox-coverage.yml
@@ -57,6 +57,11 @@ jobs:
 
       - name: "Combine"
         run: |
+          export SECRET_KEY=${{ secrets.SECRET_KEY }}
+          export EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }}
+          export DATABASE_URL=${{ secrets.DATABASE_URL }}
+          export SOCIALACCOUNT_APP_CLIENT_ID=${{ secrets.SOCIALACCOUNT_APP_CLIENT_ID }}
+          export SOCIALACCOUNT_APP_SECRET=${{ secrets.SOCIALACCOUNT_APP_SECRET }}
           python -m nox -s coverage-3.12
           export TOTAL=$(python -c "import json;print(json.load(open('htmlcov/coverage.json'))['totals']['percent_covered_display'])")
           echo "total=$TOTAL" >> $GITHUB_ENV
