--- a/.github/workflows/nox-coverage.yml
+++ b/.github/workflows/nox-coverage.yml
@@ -53,7 +53,12 @@ jobs:
 
       - name: "Combine"
         run: |
-          export TOTAL=$(python -c "import json;print(json.load(open('htmlcov/coverage.json'))['totals']['percent_covered_display'])")
+          python -Im pip install --upgrade coverage[toml]
+
+          python -Im coverage combine
+          python -Im coverage report -m --skip-covered
+          python -Im coverage json
+          export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
           echo "total=$TOTAL" >> $GITHUB_ENV
           echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
 
