--- a/.github/workflows/nox-coverage.yml
+++ b/.github/workflows/nox-coverage.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: "Combine"
         run: |
-          python -Im pip install --upgrade coverage[toml]
+          python -Im pip install --upgrade coverage[toml] django-coverage-plugin
 
           python -Im coverage combine
           python -Im coverage report -m --skip-covered
