--- a/.github/workflows/nox-coverage.yml
+++ b/.github/workflows/nox-coverage.yml
@@ -8,9 +8,9 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
     name: Python ${{ matrix.python-version }} django-start
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
@@ -23,7 +23,8 @@ jobs:
           export DATABASE_URL=${{ secrets.DATABASE_URL }}
           export SOCIALACCOUNT_APP_CLIENT_ID=${{ secrets.SOCIALACCOUNT_APP_CLIENT_ID }}
           export SOCIALACCOUNT_APP_SECRET=${{ secrets.SOCIALACCOUNT_APP_SECRET }}
-          nox -s lint-${{ matrix.python-version }}
+
+          nox -s coverage-${{ matrix.python-version }}
 
       - name: "Upload coverage data"
         uses: actions/upload-artifact@v4
@@ -41,10 +42,10 @@ jobs:
         python-version: ["3.12"]
     steps:
       - name: "Check out the repo"
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: "Set up Python"
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: "3.12"
 
