Add run statement #95

--- a/.github/workflows/nox-coverage.yml
+++ b/.github/workflows/nox-coverage.yml
@@ -28,6 +28,7 @@ jobs:
           merge-multiple: true
 
       - name: "Combine coverage data"
+        run: |
           export TOTAL=$(python -c "import json;print(json.load(open('htmlcov/coverage.json'))['totals']['percent_covered_display'])")
           echo "total=$TOTAL" >> $GITHUB_ENV
           echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
