--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,19 +77,21 @@ django-types = "^0.19.0"
 [tool.coverage.run]
 branch = true
 dynamic_context = "test_function"
-source = ["accounts", "config", "pages"]
+source = [
+    "accounts",
+    "config",
+    "pages",
+]
 omit = [
     "conftest.py",
     "manage.py",
     "settings.py",
-    "*test.py",
     "asgi.py",
     "gunicorn.py",
     "wsgi.py",
     "*/__init__.py",
     "*/migrations/*",
     "*/factories.py",
-    # "*/tests/*",
 ]
 plugins = [
     "django_coverage_plugin",
@@ -107,15 +109,19 @@ show_contexts = true
 title = "django-start coverage report"
 
 [tool.djlint]
-exclude= ["htmlcov", "staticfiles"]
-files= ["templates/"]
+exclude = ["htmlcov", "staticfiles"]
+files = ["templates/"]
 indent = 2
 max_line_length = 120
 preserve_blank_lines = true
 
 [tool.pyright]
 # See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
-include = ["config", "accounts", "pages",]
+include = [
+    "config",
+    "accounts",
+    "pages",
+]
 exclude = [
     "**/tests",
     "**/__pycache__",
