--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ django-allauth = ">=0.60.0, < 0.70"
 environs = { version = "^11", extras = ["django"] }
 django-extensions = "^3.2"
 whitenoise = "^6.1.0"
-psycopg2-binary = "^2.9.5"
+psycopg = { version = "3.2.3", extras = ["binary"] } 
+# psycopg2-binary = "^2.9.5"
 Pillow = "^10.0"
 gunicorn = "^23.0"
 crispy-bootstrap4 = "^2024.0"
