Update project for Python 3.13.x support. Resolves #322

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-start"
-version = "0.3.0"
+version = "0.3.1"
 description = "Basic Django project template"
 authors = [
     "Kevin Bowen <kevin.bowen@gmail.com>",
@@ -36,6 +36,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Internet :: WWW/HTTP",
 ]
 
@@ -137,7 +138,7 @@ ignore = ["docs/_build"]
 defineConstant = { DEBUG = true }
 stubPath = ""
 # The following may need to be modified when collaborating with others
-venv = "django-start-l9hOYV8r-py3.12"
+venv = "django-start-l9hOYV8r-py3.13"
 venvPath = "../../../venvs"
 # More portable venv config
 # venvPath = "."
@@ -159,11 +160,11 @@ reportUnnecessaryCast = "warning"
 reportUnnecessaryComparison = "error"
 reportUnnecessaryTypeIgnoreComment = "warning"
 
-pythonVersion = "3.12"
+pythonVersion = "3.13"
 pythonPlatform = "Linux"
 
 executionEnvironments = [
-  { root = ".", pythonVersion = "3.12", extraPaths = [ "accounts", "config", "pages" ] },
+  { root = ".", pythonVersion = "3.13", extraPaths = [ "accounts", "config", "pages" ] },
 ]
 
 [tool.pytest.ini_options]
@@ -186,8 +187,8 @@ unsafe-fixes = false
 line-length = 88
 indent-width = 4
 
-# Assume Python 3.12.x
-target-version = "py312"
+# Assume Python 3.13.x
+target-version = "py313"
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
