--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ django-countries = "^7.3.2"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
-pre-commit = "^3.0.0"
+pre-commit = ">=4.0, <5.0"
 ruff = ">=0.6, <=0.6.9"
 nox = "2024.4.15"
 pytest = "^8.0"
