--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ environs = { version = "^11", extras = ["django"] }
 django-extensions = "^3.2"
 whitenoise = "^6.1.0"
 psycopg = { version = "3.2.3", extras = ["binary"] } 
-Pillow = "^10.0"
+Pillow = ">=11.0, <12.0"
 gunicorn = "^23.0"
 crispy-bootstrap4 = "^2024.0"
 django-crispy-forms = "^2.0"
@@ -61,7 +61,7 @@ django-countries = "^7.3.2"
 django-debug-toolbar = "^4.0.0"
 pre-commit = ">=4.0, <5.0"
 ruff = ">=0.6, <=0.6.9"
-nox = "2024.4.15"
+nox = "2024.10.09"
 pytest = "^8.0"
 pytest-cov = ">=5.0, <6.0"
 pytest-django = "^4.5.2"
