Update Sphinx & sphinx-lint. Resolves #443

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,9 +68,9 @@ pytest-django = "^4.5.2"
 pytest-sugar = "^1.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 django-coverage-plugin = "^3.0.0"
-sphinx = ">= 7.3, < 7.4"
+sphinx = ">= 8.0, < 9.0"
 djlint = "^1.31.0"
-sphinx-lint = "^0.9.1"
+sphinx-lint = "1.0"
 safety = "^3.0"
 factory-boy = "^3.2.0"
 ipython = "^8.4.0"
