--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ django-coverage-plugin = "^3.0.0"
 sphinx = ">= 8.0, < 9.0"
 djlint = "^1.31.0"
 sphinx-lint = "1.0"
-safety = "^3.0"
+safety = "3.2.3"
 factory-boy = "^3.2.0"
 ipython = "^8.4.0"
 friendly = "^0.7.0"
