--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ django-countries = "^7.3.2"
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.0.0"
 pre-commit = ">=4.0, <5.0"
-ruff = ">=0.6, <=0.6.9"
+ruff = ">=0.7, <0.8"
 nox = "2024.10.09"
 pytest = "^8.0"
 pytest-cov = ">=6.0.0, <7.0"
