--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,39 +43,39 @@ classifiers = [
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10.0, <3.14.0"
 Django = "5.1.4"
 
 django-allauth = ">=65.0, <66.0.0"
-environs = { version = "^11", extras = ["django"] }
-django-extensions = "^3.2"
-whitenoise = "^6.1.0"
+environs = { version = ">=11.0, <11.3", extras = ["django"] }
+django-extensions = ">=3.2.0, <3.3.0"
+whitenoise = ">=6.8.0, <6.9.0"
 psycopg = { version = "3.2.3", extras = ["binary"] } 
 Pillow = ">=11.0, <12.0"
-gunicorn = "^23.0"
-crispy-bootstrap4 = "^2024.0"
-django-crispy-forms = "^2.0"
-django-countries = "^7.3.2"
+gunicorn = ">=23.0.0, <24.0.0"
+crispy-bootstrap4 = "2024.10"
+django-crispy-forms = ">=2.0, <2.4"
+django-countries = ">=7.3.2, <7.7.0"
 
 [tool.poetry.group.dev.dependencies]
-django-debug-toolbar = "^4.0.0"
+django-debug-toolbar = ">=4.0.0, <5.0.0"
 pre-commit = ">=4.0, <5.0"
 ruff = ">=0.8, <1.0"
 nox = "2024.10.09"
-pytest = "^8.0"
+pytest = ">=8.0, <8.4"
 pytest-cov = ">=6.0.0, <7.0"
-pytest-django = "^4.5.2"
-pytest-sugar = "^1.0"
-coverage = { version = "^7.0.0", extras = ["toml"] }
-django-coverage-plugin = "^3.0.0"
+pytest-django = ">=4.5.2, <5.0.0"
+pytest-sugar = "1.0.0"
+coverage = { version = ">=7.0.0, <8.0.0", extras = ["toml"] }
+django-coverage-plugin = ">=3.0.0, <3.2.0"
 sphinx = ">= 8.0, <9.0"
-djlint = "^1.31.0"
+djlint = ">=1.31.0, <1.40.0"
 sphinx-lint = "1.0"
-safety = "3.2.13"
-factory-boy = "^3.2.0"
+safety = "3.2.3"
+factory-boy = "3.3.1"
 werkzeug = ">=3.1, <4.0"
 pyopenssl = ">=24.0, <25.0"
-furo = "^2024.0"
+furo = ">=2024.0, <2025.0"
 django-types = ">=0.20.0, <0.21.0"
 
 [tool.coverage.run]
