--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
         files: (^|/)a/.+\.(py|html|sh|css|js)$
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.8.4
+    rev: v0.8.6
     hooks:
       # Run the linter
       - id: ruff
@@ -50,11 +50,11 @@ repos:
       - id: sphinx-lint
 
   - repo: https://github.com/python-poetry/poetry
-    rev: 1.8.0
+    rev: 2.0.0
     hooks:
-      - id: poetry-check
+      # - id: poetry-check
       - id: poetry-lock
-      - id: poetry-export
-        args: ["-f", "requirements.txt"]
+      # - id: poetry-export
+      #   args: ["-f", "requirements.txt"]
       # - id: poetry-export
       # args: ["--with", "dev", "-o", "requirements-dev.txt"]
