--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
   - repo: https://github.com/python-poetry/poetry
     rev: 2.0.0
     hooks:
-      # - id: poetry-check
+      - id: poetry-check
       - id: poetry-lock
       # - id: poetry-export
       #   args: ["-f", "requirements.txt"]
