--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,30 @@
-[tool.poetry]
+[project]
 name = "django-start"
-version = "0.3.1"
+version = "0.3.2"
 description = "Basic Django project template"
+requires-python = ">=3.10.0, <3.14.0"
+dependencies = [
+    "Django (==5.1.4)",
+    "django-allauth (>=65.0, <66.0.0)",
+    "environs[django] (>=11.0, <11.3)",
+    "django-extensions (>=3.2.0, <3.3.0)",
+    "whitenoise (>=6.8.0, <6.9.0)",
+    "psycopg[binary] (==3.2.3)",
+    "Pillow (>=11.0, <12.0)",
+    "gunicorn (>=23.0.0, <24.0.0)",
+    # crispy-bootstrap4 uses calver, so version is unclamped
+    "crispy-bootstrap4 (>=2024.10)",
+    "django-crispy-forms (>=2.0, <2.4)",
+    "django-countries (>=7.3.2, <7.7.0)",
+]
 authors = [
-    "Kevin Bowen <kevin.bowen@gmail.com>",
+    { name = "Kevin Bowen", email= "kevin.bowen@gmail.com" },
 ]
 maintainers = [
 ]
-license = "MIT"
-
+license = { text = "MIT" }
 readme = "README.md"
-
-homepage = "https://github.com/kevinbowen777/django-start.git"
-repository = "https://github.com/kevinbowen777/django-start.git"
-documentation = "file:///docs/index.rst"
-
-keywords = [
-    "django",
-    "web-application",
-    "template",
-]
+keywords = ["django","web-application","template",]
 
 classifiers = [
     # https://pypi.org/pypi?:action=list_classifiers
@@ -42,20 +47,12 @@ classifiers = [
 
 package-mode = false
 
-[tool.poetry.dependencies]
-python = ">=3.10.0, <3.14.0"
-Django = "5.1.4"
+[project.urls]
+Homepage = "https://github.com/kevinbowen777/django-start.git"
+Changelog = "https://github.com/kevinbowen777/NEWS"
+Repository = "https://github.com/kevinbowen777/django-start.git"
+Documentation = "file:///docs/index.rst"
 
-django-allauth = ">=65.0, <66.0.0"
-environs = { version = ">=11.0, <11.3", extras = ["django"] }
-django-extensions = ">=3.2.0, <3.3.0"
-whitenoise = ">=6.8.0, <6.9.0"
-psycopg = { version = "3.2.3", extras = ["binary"] } 
-Pillow = ">=11.0, <12.0"
-gunicorn = ">=23.0.0, <24.0.0"
-crispy-bootstrap4 = "2024.10"
-django-crispy-forms = ">=2.0, <2.4"
-django-countries = ">=7.3.2, <7.7.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = ">=4.0.0, <5.0.0"
@@ -269,5 +266,5 @@ docstring-code-format = false
 docstring-code-line-length = "dynamic"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=2.0"]
 build-backend = "poetry.core.masonry.api"
