Add plugin-export to pre-commit. Bump poetry versions (#505)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,7 +54,11 @@ repos:
     hooks:
       - id: poetry-check
       - id: poetry-lock
+
+  - repo: https://github.com/python-poetry/poetry-plugin-export
+    rev: 1.9.0
+    hooks:
+      - id: poetry-export
+        args: ["-f", "requirements.txt"]
       # - id: poetry-export
-      #   args: ["-f", "requirements.txt"]
-      # - id: poetry-export
-      # args: ["--with", "dev", "-o", "requirements-dev.txt"]
+      #   args: ["--with", "dev", "-o", "requirements-dev.txt"]
