--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -411,24 +411,24 @@ dj-database-url==3.0.1 ; python_full_version >= "3.11.0" and python_full_version
 dj-email-url==1.0.6 ; python_full_version >= "3.11.0" and python_full_version < "3.15.0" \
     --hash=sha256:55ffe3329e48f54f8a75aa36ece08f365e09d61f8a209773ef09a1d4760e699a \
     --hash=sha256:cbd08327fbb08b104eac160fb4703f375532e4c0243eb230f5b960daee7a96db
-django==5.2.7 ; python_version >= "3.11" and python_full_version < "3.15.0" \
-    --hash=sha256:59a13a6515f787dec9d97a0438cd2efac78c8aca1c80025244b0fe507fe0754b \
-    --hash=sha256:e0f6f12e2551b1716a95a63a1366ca91bbcd7be059862c1b18f989b1da356cdd
+django==5.2.8 ; python_version >= "3.11" and python_full_version < "3.15.0" \
+    --hash=sha256:23254866a5bb9a2cfa6004e8b809ec6246eba4b58a7589bc2772f1bcc8456c7f \
+    --hash=sha256:37e687f7bd73ddf043e2b6b97cfe02fcbb11f2dbb3adccc6a2b18c6daa054d7f
 django-allauth==65.13.0 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:119c0cf1cc2e0d1a0fe2f13588f30951d64989256084de2d60f13ab9308f9fa0 \
     --hash=sha256:7d7b7e7ad603eb3864c142f051e2cce7be2f9a9c6945a51172ec83d48c6c843b
 django-cache-url==3.4.5 ; python_full_version >= "3.11.0" and python_full_version < "3.15.0" \
     --hash=sha256:5f350759978483ab85dc0e3e17b3d53eed3394a28148f6bf0f53d11d0feb5b3c \
     --hash=sha256:eb9fb194717524348c95cad9905b70b647452741c1d9e481fac6d2125f0ad917
-django-countries==7.6.1 ; python_full_version >= "3.11.0" and python_full_version < "3.15.0" \
-    --hash=sha256:1ed20842fe0f6194f91faca21076649513846a8787c9eb5aeec3cbe1656b8acc \
-    --hash=sha256:c772d4e3e54afcc5f97a018544e96f246c6d9f1db51898ab0c15cd57e19437cf
+django-countries==8.1.0 ; python_version >= "3.11" and python_full_version < "3.15.0" \
+    --hash=sha256:62ffbbb2a6aeac98b2caa840b6d602025d82b5c2be6dc974459817c4064b3915 \
+    --hash=sha256:f6a1be18600b6f8e9feff027085226cf247a780831e7c0723c8b3e8e781e1326
 django-coverage-plugin==3.2.0 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:0e1460294ecd4b192bd09788ab9ad9380d9b8c9b45925b408ce6c620ac352585 \
     --hash=sha256:a4a9400c784c86f1ba53a73c336508e07316c92345b34a0eb0b22b3b14cdbdd6
-django-crispy-forms==2.4 ; python_version >= "3.11" and python_full_version < "3.15.0" \
-    --hash=sha256:5a4b99876cfb1bdd3e47727731b6d4197c51c0da502befbfbec6a93010b02030 \
-    --hash=sha256:915e1ffdeb2987d78b33fabfeff8e5203c8776aa910a3a659a2c514ca125f3bd
+django-crispy-forms==2.5 ; python_version >= "3.11" and python_full_version < "3.15.0" \
+    --hash=sha256:066e72a8f152a1334f1c811cc37740868efe3265e5a218f79079ef89f848c3d8 \
+    --hash=sha256:adc99d5901baca09479c53bf536b3909e80a9f2bb299438a223de4c106ebf1f9
 django-debug-toolbar==5.2.0 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:15627f4c2836a9099d795e271e38e8cf5204ccd79d5dbcd748f8a6c284dcd195 \
     --hash=sha256:9e7f0145e1a1b7d78fcc3b53798686170a5b472d9cf085d88121ff823e900821
@@ -677,9 +677,9 @@ msgpack==1.1.2 ; python_version >= "3.11" and python_full_version < "3.15.0" \
 nodeenv==1.9.1 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:6ec12890a2dab7946721edbfbcd91f3319c6ccc9aec47be7c7e6b7011ee6645f \
     --hash=sha256:ba11c9782d29c27c70ffbdda2d7415098754709be8a7056d79a737cd901155c9
-nox==2025.10.16 ; python_version >= "3.11" and python_full_version < "3.15.0" \
-    --hash=sha256:b4ef28709d5fb0d964ccc987c8863f76ed860700fabd04ad557252df3562a7e5 \
-    --hash=sha256:fca1e7504384dbc91dddef3fec45d04572f23c882a87241e2c793b77fe1c9259
+nox==2025.11.12 ; python_version >= "3.11" and python_full_version < "3.15.0" \
+    --hash=sha256:3d317f9e61f49d6bde39cf2f59695bb4e1722960457eee3ae19dacfe03c07259 \
+    --hash=sha256:707171f9f63bc685da9d00edd8c2ceec8405b8e38b5fb4e46114a860070ef0ff
 packageurl-python==0.17.5 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:a7be3f3ba70d705f738ace9bf6124f31920245a49fa69d4b416da7037dd2de61 \
     --hash=sha256:f0e55452ab37b5c192c443de1458e3f3b4d8ac27f747df6e8c48adeab081d321
@@ -886,9 +886,9 @@ pyopenssl==25.3.0 ; python_version >= "3.11" and python_full_version < "3.15.0" 
 pyparsing==3.2.5 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:2df8d5b7b2802ef88e8d016a2eb9c7aeaa923529cd251ed0fe4608275d4105b6 \
     --hash=sha256:e38a4f02064cf41fe6593d328d0512495ad1f3d8a91c4f73fc401b3079a59a5e
-pytest==8.4.2 ; python_version >= "3.11" and python_full_version < "3.15.0" \
-    --hash=sha256:86c0d0b93306b961d58d62a4db4879f27fe25513d4b969df351abdddb3c30e01 \
-    --hash=sha256:872f880de3fc3a5bdc88a11b39c9710c3497a547cfa9320bc3c5e62fbf272e79
+pytest==9.0.1 ; python_version >= "3.11" and python_full_version < "3.15.0" \
+    --hash=sha256:3e9c069ea73583e255c3b21cf46b8d3c56f6e3a1a8f6da94ccb0fcf57b9d73c8 \
+    --hash=sha256:67be0030d194df2dfa7b556f2e56fb3c3315bd5c8822c6951162b92b32ce7dad
 pytest-cov==7.0.0 ; python_version >= "3.11" and python_full_version < "3.15.0" \
     --hash=sha256:33c97eda2e049a0c5298e91f519302a1334c26ac65c1a483d6206fd458361af1 \
     --hash=sha256:3b8e9558b16cc1479da72058bdecf8073661c7f57f7d3c5f22a1c23507f2d861
