--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ cert.key
 
 # Distribution / packaging
 .Python
-build/
+# build/
 develop-eggs/
 dist/
 downloads/
@@ -82,7 +82,13 @@ instance/
 .scrapy
 
 # Sphinx documentation
-# docs/_build/
+docs/html/.doctrees/
+docs/html/_sources/
+docs/html/_sphinx_design_static/
+# docs/html/_static/
+docs/html/.buildinfo
+docs/html/.buildinfo.bak
+docs/html/objects.inv
 
 # PyBuilder
 .pybuilder/
