--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "django-start"
-version = "0.3.3"
+version = "0.3.4"
 description = "Basic Django project template"
 requires-python = ">=3.11.0"
 dependencies = [
@@ -117,7 +117,7 @@ show_contexts = true
 title = "django-start coverage report"
 
 [tool.djlint]
-exclude = ["htmlcov", "staticfiles"]
+exclude = ["htmlcov", "staticfiles", "docs/html"]
 files = ["templates/"]
 indent = 2
 max_line_length = 120
@@ -135,7 +135,7 @@ exclude = [
     "**/__pycache__",
     "**/migrations",
 ]
-ignore = ["docs/build"]
+ignore = ["docs/html"]
 defineConstant = { DEBUG = true }
 stubPath = ""
 # The following may need to be modified when collaborating with others
@@ -176,7 +176,8 @@ DJANGO_SETTINGS_MODULE = "config.test"
 addopts = "--reuse-db -p no:warnings"
 python_files = ["test_*.py"]
 filterwarnings = [
-    # "ignore::django.utils.deprecation.RemovedInDjango51Warning",
+    "ignore::django.utils.deprecation.RemovedInDjango53Warning",
+    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
 ]
 
 [tool.ruff]
@@ -204,6 +205,7 @@ exclude = [
     "migrations",
     "images",
     "media",
+    "docs/html",
 ]
 
 [tool.ruff.lint]
